WebPageProxy::DidCommitLoadForFrame should use FrameLoadType instead of casting to/from uint32_t for IPC https://bugs.webkit.org/show_bug.cgi?id=212028 <rdar://problem/63343021>

Patch by Alex Christensen <achristensen@webkit.org> on 2020-05-18
Reviewed by David Kilzer.

* UIProcess/ProvisionalPageProxy.cpp:
(WebKit::ProvisionalPageProxy::didCommitLoadForFrame):
* UIProcess/ProvisionalPageProxy.h:
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::commitProvisionalPage):
(WebKit::WebPageProxy::didCommitLoadForFrame):
* UIProcess/WebPageProxy.h:
* UIProcess/WebPageProxy.messages.in:
* WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
(WebKit::WebFrameLoaderClient::dispatchDidCommitLoad):

Canonical link: https://commits.webkit.org/224920@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261829 268f45cc-cd09-0410-ab3c-d52691b4dbfc